<resources>
    <string name="app_name">TRAVEL\nTALE</string>
    <string name="login_app_name">TRAVELTALE</string>

    <string name="intro">여행 전 체크리스트와 일정을 작성하고 여행 후 느낀점을 작성해보세요. 여행에서 만든 소중한 순간들을 아름답게 담아 영구적으로 보존할 수 있습니다. 그리고 나중에 다시 찾아보면서 그 때의 감동과 기쁨을 되새길 수 있어요.</string>

    <!-- tale -->
    <string name="tale_title">롯폰기 일루미네이션</string>
    <string name="tale_date">12.Apr.2024 - 13.Apr.2024</string>
    <string name="tale_location">도쿄 롯폰기</string>
    <string name="tale_content">로펀기 일루미네이션은 세계적으로 유명한 일루미네이션 행사 중 하나로, 프랑스 파리에서 매년 12월부터 2월까지 열리는 겨울 축제입니다. 이 축제는 프랑스의 역사적인 건축물과 유럽의 가장 아름다운 도시 중 하나인 파리의 아름다움을 한눈에 감상할 수 있는 기회를 제공합니다.

로펀기 일루미네이션은 에펠탑, 루브르 박물관, 프랑스 국회의사당 등 파리의 유명한 건축물과 명소를 환상적인 조명과 빛으로 장식합니다. 이 행사는 밤에 시작되며, 일몰 이후부터 새벽까지 각 건축물이 아름다운 조명 아래에서 빛납니다. 로펀기 일루미네이션을 관람하면 파리의 아름다움을 새롭게 발견하고, 동시에 유럽의 역사와 문화에 대한 깊은 이해를 얻을 수 있습니다.</string>

    <string name="tale_write_hint">여행에서 즐거웠던 일, 기억에 남는 경험을 기록해주세요.</string>
    <string name="tale_edit_hint">여행에서 즐거웠던 일, 기억에 남는 경험을 수정해주세요</string>

    <!-- input -->
    <string name="input_title">제목을 입력해주세요.</string>
    <string name="input_date">여행일자를 선택해주세요.</string>
    <string name="input_map">여행지를 선택해주세요.</string>

    <string name="regi_header">회원가입</string>
    <string name="nickname_header">닉네임</string>
    <string name="id_header">아이디</string>
    <string name="regi_chk_id">중복확인</string>
    <string name="pw_header">비밀번호</string>
    <string name="check_pw_fail">영문 대소문자, 숫자, 특수문자 중 2가지 이상을 조합하여 6~12자로 입력해주세요.</string>
    <string name="check_id_fail">이미 존재하는 아이디입니다. 다른 아이디를 사용해주세요.</string>
    <string name="check_id_success">사용 가능한 아이디입니다.</string>
    <string name="email_header">이메일</string>
    <string name="phone_header">휴대폰 번호</string>
    <string name="start_txt">시작하기</string>
    <string name="login_header">로그인</string>
    <string name="login_id_txt">아이디</string>
    <string name="login_pw_txt">비밀번호</string>
    <string name="login_q">아직 회원이 아니신가요?</string>
    <string name="regi_txt">회원가입</string>
    <string name="mypage_header">마이페이지</string>
    <string name="center">"""평일 am 09:00-pm 18:00
점심 pm 12:00- pm 14:00
토, 일, 공휴일 휴무입니다."""</string>

    <!--login google-->
    <string name="default_web_client_id">OAuth client-id</string>


    <!-- mypage -->
    <string name="nickname">Jessi</string>

    <!-- privacy -->
    <string name="privacy">"""
트레블테일은 이용자들의 개인정보보호를 매우 중요시하며, 이용자가 회사의 서비스를 이요함과 동시에 온라인상에서 회사에 제공한 개인정보가 보호 받을 수 있도록 최선을 다하고 있습니다.
이에 트래블테일은 통신비밀보호법, 전기통신사업법, 정보통신망 이용촉진 및 정보보호 등에 관한 법률 등 정보통신서비스제공자가 준수하여야 할 관련 법규상의 개인정보보호 규정 및 정보통신부가 제정한 개인정보보호지침을 준수하고 있습니다.
트래블테일은 개인정보처리방침을 통하여 이용자들이 제공하는 개인정보가 어떤한 용도와 방식으로 이용되고 있으며 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.
회사의 개인정보 처리방침은 정부의 법률 및 지침 변경이나 회사의 내부 방침 변경 등으로 인하여 수시로 변경될 수 있고, 이에 따른 개인정보 처리방침의 지속적인 개선을 위하여 필요한 절차를정하고 있습니다.이용자들께서는 사이트 방문 시수시로 확인하시기 바랍니다.

트래블테일의 개인정보 처리방침은 다음과 같은 내용을 담고 있습니다.

1. 개인정보 수집에 대한 동의
2. 개인정보의 수집목적 및 이용목적
3. 수집하는 개인정보 항목 및 수집방법
4. 수집하는 개인정보의 보유 및 이용기간
5. 수집한 개인정보의 공유 및 제공
6. 이용자 자신의 개인정보 관리(열람,정정,삭제 등)에 관한 사항
7. 쿠키(Cookie)의 운용 및 거부
8. 개인정보관련 의견수렴 및 불만처리에 관한 사항
9. 고지의 의무

1. 개인정보 수집에 대한 동의

트래블테일은 이용자들이 회사의 개인정보 처리방침 또는 이용약관의 내용에 대하여 「동의」버튼 또는 「취소」버튼을 클릭할 수 있는 절차를 마련하여, 「동의」버튼을 클릭하면 개인정보 수집에 대해 동의한 것으로 봅니다.


2. 개인정보의 수집목적 및 이용목적

"개인정보"라 함은 생존하는 개인에 관한 정보로서 당해 정보에 포함되어 있는 성명 등의 사항에 의하여 당해 개인을 식별할 수 있는 정보(당해 정보만으로는 특정 개인을 식별할 수 없더라도 다른 정보와 용이하게 결합하여 식별할 수 있는 것을 포함)를 말합니다.

대부분의 서비스는 별도의 사용자 등록이 없이 언제든지 사용할 수 있습니다. 그러나 트래블테일은 회원서비스를 통하여 이용자들에게 맞춤식 서비스를 비롯한 보다 더 향상된 양질의 서비스를 제공하기 위하여 이용자 개인의 정보를 수집하고 있습니다.

트래블테일은 이용자의 사전 동의 없이는 이용자의 개인 정보를 공개하지 않으며, 수집된 정보는 아래와 같이 이용하고 있습니다.

첫째, 이용자들이 제공한 개인정보를 바탕으로 보다 더 유용한 서비스를 개발할 수 있습니다. 트래블테일은 신규 서비스개발이나 컨텐츠의 확충 시에 기존 이용자들이 회사에 제공한 개인정보를 바탕으로 개발해야 할 서비스의 우선 순위를 보다 더 효율적으로 정하고, 트래블테일은 이용자들이 필요로 할 컨텐츠를 합리적으로 선택하여 제공할 수 있습니다.

둘째, 수집하는 개인정보 항목과 수집 및 이용목적은 다음과 같습니다.
- 아이디, 비밀번호 : 회원제 서비스 이용에 따른 본인 확인 절차에 이용
- 이메일주소, 전화번호 : 고지사항 전달, 불만처리 등을 위한 원활한 의사소통 경로의 확보, 새로운 서비스 및 신상품이나 이벤트 정보 등의 안내

기타 위 수집된 정보를 이용하여 서비스 제공에 관한 계약 이행 및 회원관리, 마케팅 및 광고에 활용하고 있습니다.

3. 수집하는 개인정보 항목 및 수집방법

트래블테일은 이용자들이 회원서비스를 이용하기 위해 회원으로 가입하실 때 서비스 제공을 위한 필수적인 정보들을 온라인상에서 입력 받고 있습니다. 회원 가입 시에 받는 필수적인 정보는 이름, 이메일 주소 등입니다. 또한 양질의 서비스 제공을 위하여 이용자들이 선택적으로 입력할 수 있는 사항으로서 전화번호 등을 입력 받고 있습니다.

그리고, 어떤 경우에라도 입력하신 정보를 이용자들에게 사전에 밝힌 목적 이외에 다른 목적으로는 사용하지 않으며 외부로 유출하지 않습니다.

4. 수집하는 개인정보의 보유 및 이용기간

이용자가 회사에 제공하는 서비스를 이용하는 동안 트래블테일은 이용자들의 개인정보를 계속적으로 보유하며 서비스 제공 등을 위해 이용합니다.
다만, 아래의 "6. 이용자 자신의 개인정보 관리(열람,정정,삭제 등)에 관한 사항" 에서 설명한 절차와 방법에 따라 회원 본인이 직접 삭제하거나 수정한 정보, 가입해지를 요청한 경우에는 재생할 수 없는 방법에 의하여 디스크에서 완전히 삭제하며 추후 열람이나 이용이 불가능한 상태로 처리됩니다.

귀하의 개인정보는 다음과 같이 개인정보의 수집목적 또는 제공받은 목적이 달성되면 파기하는 것을 원칙으로 합니다. 그리고 상법, 전자상거래등에서의 소비자보호에 관한 법률 등 관계법령의 규정에 의하여 보존할 필요가 있는 경우 트래블테일 관계법령에서 정한 일정한 기간 동안 회원정보를 보관합니다.
이 경우 트래블테일은 보관하는 정보를 그 보관의 목적으로만 이용하며 보존기간은 아래와 같습니다.

- 계약 또는 청약철회 등에 관한 기록 : 5년
- 대금결제 및 재화 등의 공급에 관한 기록 : 5년
- 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년

트래블테일은 귀중한 회원의 개인정보를 안전하게 처리하며, 유출의 방지를 위하여 다음과 같은 방법을 통하여 개인정보를 파기합니다.

- 종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.
- 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다

5. 수집한 개인정보의 공유 및 제공

트래블테일 이용자들의 개인정보를 "2. 개인정보의 수집목적 및 이용목적"에서 고지한 범위 내에서 사용하며, 이용자의 사전 동의 없이는 동 범위를 초과하여 이용하거나 원칙적으로 이용자의 개인정보를 외부에 공개하지 않습니다.

6. 이용자 자신의 개인정보 관리(열람,정정,삭제 등)에 관한 사항

회원님이 원하실 경우 언제라도 당사에서 개인정보를 열람하실 수 있으며 보관된 필수 정보를 수정하실 수 있습니다. 또한 회원 가입 시 요구된 필수 정보 외의 추가 정보는 언제나 열람, 수정, 삭제할 수 있습니다. 회원님의 개인정보 변경 및 삭제와 회원탈퇴는 당사의 고객센터에서 이용하실 수 있습니다.

7. 쿠키(Cookie)의 운용 및 거부

가. 쿠키의 사용 목적
① 회사는 개인 맞춤 서비스를 제공하기 위해서 이용자에 대한 정보를 저장하고 수시로 불러오는 '쿠키(cookie)'를 사용합니다. 쿠키는 웹사이트 서버가 이용자의 브라우저에게 전송하는 소량의 정보로서 이용자 컴퓨터의 하드디스크에 저장됩니다.
② 회사는 쿠키의 사용을 통해서만 가능한 특정된 맞춤형 서비스를 제공할 수 있습니다.
③ 회사는 회원을 식별하고 회원의 로그인 상태를 유지하기 위해 쿠키를 사용할 수 있습니다.

나. 쿠키의 설치/운용 및 거부
① 이용자는 쿠키 설치에 대한 선택권을 가지고 있습니다. 따라서 이용자는 웹브라우저에서 옵션을 조정함으로써 모든 쿠키를 허용/거부하거나, 쿠키가 저장될 때마다 확인을 거치도록 할 수 있습니다.

- 쿠키 설치 허용 여부를 지정하는 방법(Internet Explorer의 경우)은 다음과 같습니다.
[도구] 메뉴에서 [인터넷 옵션]을 선택합니다.
[개인정보 탭]을 클릭합니다.
[개인정보처리 수준]을 설정하시면 됩니다.
② 쿠키의 저장을 거부할 경우에는 개인 맞춤서비스 등 회사가 제공하는 일부 서비스는 이용이 어려울 수 있습니다.

8. 개인정보관련 의견수렴 및 불만처리에 관한 사항

당사는 개인정보보호와 관련하여 이용자 여러분들의 의견을 수렴하고 있으며 불만을 처리하기 위하여 모든 절차와 방법을 마련하고 있습니다. 이용자들은 하단에 명시한 "11. 개인정보  신고할 수 있고, 헬스앤뷰티 주식회사는 이용자들의 신고사항에 대하여 신속하고도 충분한 답변을 해 드릴 것입니다.

13. 고지의 의무

현 개인정보처리방침의 내용은 정부의 정책 또는 보안기술의 변경에 따라 내용의 추가 삭제 및 수정이 있을 시에는 홈페이지의 메인화면을 통해 고지할 것입니다."""
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kakao_app_key">9a3023c46872f7bbb18568a2efdd411f</string>
    <string name="naver_client_id">TmhpRvB9Sbmpp7gVBk4B</string>
    <string name="naver_client_secret">HTE04sPRKL</string>
    <string name="naver_client_name">traveltale</string>
    <string name="google_maps_key">AIzaSyBcMGGKyO_NG1gRlNwJni0fxpwMLTbIGW4</string>

</resources>