<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_lo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97A2FF"
    android:clipToOutline="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="68dp"
        android:gravity="top"
        android:text="@string/login_app_name"
        android:textAppearance="@style/login_app_name"
        android:fontFamily="@font/kanit_font"
        android:textFontWeight="900"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="130dp"
        android:gravity="top"
        android:text="@string/login_header"
        android:textAppearance="@style/login_header"
        android:fontFamily="@font/kanit_font" />

    <RelativeLayout
        android:id="@+id/login_rectangle"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="215dp"
        android:layout_marginRight="27dp"
        android:background="@drawable/login_rectangle"
        android:elevation="4dp">

        <!--아이디-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:gravity="top"
                android:text="@string/login_id_txt"
                android:textAppearance="@style/login_id_txt"
                android:fontFamily="@font/kanit_font"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/login_id"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:textColor="@color/black"
                    android:background="@drawable/login_input"
                    android:hint="Enter your ID"
                    android:fontFamily="@font/kanit_font"/>
            </RelativeLayout>
        </LinearLayout>

        <!-- 비밀번호 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_pw_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:gravity="top"
                android:text="@string/login_pw_txt"
                android:textAppearance="@style/login_pw_txt"
                android:fontFamily="@font/kanit_font"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_pw"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/login_input"
                    android:textColor="@color/black"
                    android:hint="Enter your password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/kanit_font"/>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="210dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="#FFBB54"
            android:text="로그인"
            android:fontFamily="@font/kanit_font"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/some_id"
                android:layout_width="124dp"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="280dp"
                android:gravity="top"
                android:text="@string/login_q"
                android:textAppearance="@style/login_q"
                android:fontFamily="@font/kanit_font"/>

            <TextView
                android:id="@+id/regi_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp"
                android:layout_marginStart="138dp"
                android:text="@string/regi_txt"
                android:textAppearance="@style/regi_txt"
                android:fontFamily="@font/kanit_font"
                />
        </LinearLayout>
    </RelativeLayout>

    <!--소셜 로그인 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_rectangle"
        android:layout_marginTop="30dp"
        >
        <RelativeLayout
            android:id="@+id/line_left"
            android:layout_width="169dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/white" />
        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_toRightOf="@+id/line_left"
            android:text="소셜로그인"
            android:fontFamily="@font/kanit_font"/>
        <RelativeLayout
            android:id="@+id/line_right"
            android:layout_width="169dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:layout_toRightOf="@+id/txt"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp">
        <ImageButton
            android:id="@+id/login_kakao"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="90dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/kakaobtn"
            />

        <ImageButton
            android:id="@+id/login_google"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="163dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/googlebtn"
            />

        <ImageButton
            android:id="@+id/login_naver"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="90dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/naverbtn"
            />
    </RelativeLayout>

</RelativeLayout>