<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_get"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true">
    <!-- 메인이미지 -->
    <RelativeLayout
        android:id="@+id/main_img"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#D9D9D9"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-76dp"
            android:scaleType="centerCrop"
            android:src="@drawable/jiho" />
    </RelativeLayout>

    <!-- 상세보기 -->
    <RelativeLayout
        android:id="@+id/get_body"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_radius"
        android:elevation="20dp"
        >
        <!-- 메인제목 출력 -->
        <RelativeLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp">
            <EditText
                android:id="@+id/get_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:text="@string/tale_title"
                android:textColor="#000000"
                android:textSize="24dp"
                android:gravity="top"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_font"
                />

            <!-- 여행일자 출력 -->
            <RelativeLayout
                android:id="@+id/get_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/get_title"
                android:layout_marginTop="15dp">
                <EditText
                    android:id="@+id/date_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tale_date"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/inter_font"/>
                <ImageButton
                    android:id="@+id/date_btn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/calendar"
                    android:filter="true"
                    android:layout_toRightOf="@id/date_txt" />
            </RelativeLayout>

            <!-- 여행지 출력 -->
            <RelativeLayout
                android:id="@+id/get_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/get_date">
                <ImageButton
                    android:id="@+id/map_btn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/map"
                    android:filter="true"
                    />
                <EditText
                    android:id="@+id/map_txt"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tale_location"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:layout_toRightOf="@id/map_btn"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/inter_font"
                    />
            </RelativeLayout>

            <!-- 체크리스트 작성하기 버튼 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/get_checklist"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFE08A"
                android:layout_below="@id/get_map">
                <Button
                    android:id="@+id/get_checklist_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFE08A"
                    android:text="체크리스트"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:fontFamily="@font/inter_font"/>
            </androidx.cardview.widget.CardView>

            <!-- 일정 작성하기 버튼 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/get_schedule"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFE08A"
                android:layout_below="@id/get_checklist">
                <Button
                    android:id="@+id/get_schedule_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFE08A"
                    android:text="여행 일정"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:fontFamily="@font/inter_font"/>
            </androidx.cardview.widget.CardView>

            <!-- tale 작성하기 버튼 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/get_tale"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFE08A"
                android:layout_below="@id/get_schedule">
                <Button
                    android:id="@+id/get_tale_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFE08A"
                    android:text="TravelTale 작성하기"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:fontFamily="@font/inter_font"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <!-- bottom_navi.xml을 include -->
        <include layout="@layout/bottom_navigation" />
    </RelativeLayout>

</RelativeLayout>